fixed content title wrapping issue

--- a/develop/app_iig/sass/modules/_content.scss
+++ b/develop/app_iig/sass/modules/_content.scss
@@ -92,7 +92,6 @@ ul.card {
             font-weight: 700;
             width: 250px;
             line-height: 1.8rem;
-            float: left;
         }
 
         .content-abstract {
